# w7xe

./: .gitignore  10MW_ECRH_控制保护总体设计方案.md  AMD_ECRH_智能化升级方案.md  AMD_R9700_GPU-EFIT_设计方案.md  AMD_R9700_实时等离子体计算平台设计.md  GPU加速射线追踪解决NTM问题_技术分析.md  GPU平衡重建与射线追踪_研究综述.md
best-rtpc/: CMakeLists.txt
best-rtpc/docs/: 设计文档.md
best-rtpc/include/common/: hip_check.h  plasma_profiles.h  timer.h  types.h
best-rtpc/include/distributed/: rfm_transport.h
best-rtpc/include/gpu_efit/: efit_kernels.h  gpu_efit.h
best-rtpc/include/ray_tracing/: ray_tracing.h  rt_kernels.h
best-rtpc/src/common/: plasma_profiles.cpp
best-rtpc/src/distributed/: rfm_transport.cpp
best-rtpc/src/gpu_efit/: CMakeLists.txt  efit_kernels.hip  gpu_efit.hip  main.cpp
best-rtpc/src/ray_tracing/: CMakeLists.txt  main.cpp  ray_tracing.hip  rt_kernels.hip
best-rtpc/tests/: benchmark.cpp  e2e_test.cpp
rocm-rtpc/: CMakeLists.txt
rocm-rtpc/docs/: 设计文档.md
rocm-rtpc/include/common/: plasma_profiles.h  timer.h  types.h
rocm-rtpc/include/distributed/: rfm_transport.h
rocm-rtpc/include/gpu_efit/: efit_kernels.h  gpu_efit.h
rocm-rtpc/include/ray_tracing/: ray_tracing.h  rt_kernels.h
rocm-rtpc/src/common/: CMakeLists.txt  plasma_profiles.cpp
rocm-rtpc/src/distributed/: CMakeLists.txt  rfm_transport.cpp
rocm-rtpc/src/gpu_efit/: efit_kernels.hip  gpu_efit.hip  main.cpp
rocm-rtpc/src/ray_tracing/: main.cpp  ray_tracing.hip  rt_kernels.hip
rocm-rtpc/tests/: benchmark.cpp  e2e_test.cpp
